Conluído página principal com layout líquido

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>Chalé Hotel</title>
-</head> 
+</head>
 
 <body>
 
@@ -29,18 +29,18 @@
                         </span>
                         <a class="reserva" href="">Reservar</a>
                         <div style="clear: both;"></div>
-                    </div>  
+                    </div>
 
                     <div id="menu">
-                            <ul id="navegacao">
-                                <li><a href="#">Home</a></li>
-                                <li><a href="#">História</a></li>
-                                <li><a href="#">Imprensa</a></li>
-                                <li><a href="#">Gastronomia</a></li>
-                                <li><a href="#">Contato</a></li>
-                            </ul>
-                            
-                            <img class="depoimento" src="img/depoimento.png" alt="">
+                        <ul id="navegacao">
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#">História</a></li>
+                            <li><a href="#">Imprensa</a></li>
+                            <li><a href="#">Gastronomia</a></li>
+                            <li><a href="#">Contato</a></li>
+                        </ul>
+
+                        <img class="depoimento" src="img/depoimento.png" alt="">
                     </div>
                 </div>
                 <!--Fim do conteúdo menu-->
@@ -48,6 +48,67 @@
 
         </div>
         <!--Fim do topo-->
+
+        <div id="area-principal">
+
+            <div class="conteudo">
+                <h2>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                </h2>
+
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum exercitationem maxime nesciunt enim
+                    sed! Iste sapiente eaque ullam harum, nostrum numquam sequi voluptate officiis ab ipsum corrupti
+                    atque doloribus nobis? Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae aliquid
+                    quas adipisci sit doloremque laborum vel eaque sunt doloribus asperiores accusamus porro, voluptatum
+                    consequuntur, nostrum, rem fugiat dolor quo eum. Lorem ipsum dolor, sit amet consectetur adipisicing
+                    elit. Exercitationem ipsum minima, voluptatum libero debitis sapiente ducimus perferendis fugiat
+                    quod, dolor impedit id soluta dignissimos cupiditate est. Hic dolorum dicta quod.</p>
+
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iure nostrum incidunt assumenda voluptatum?
+                    Porro reprehenderit quisquam, fuga laudantium ipsam praesentium voluptates doloremque esse adipisci,
+                    tenetur eum dolores explicabo suscipit eius!</p>
+
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt earum assumenda natus commodi
+                    consectetur aperiam voluptas laudantium obcaecati repudiandae! Officia veniam aliquam sint autem
+                    quaerat debitis odit quasi nihil architecto.</p>
+            </div>
+
+        </div>
+
+        <div id="area-lateral">
+
+            <div class="conteudo">
+                <ul id="beneficios">
+
+                    <li><a href="#"><img src="img/apartamento.jpg" width="150" alt="apartamento">
+                            <h3>apartamento</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque a error doloribus.
+                            Delectus voluptates excepturi voluptatibus ab inventore.</p>
+                        </a>
+                    </li>
+
+                    <li><a href="#"><img src="img/restaurante.jpg" width="150" alt="restaurante">
+                            <h3>restaurante</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque a error doloribus.
+                            Delectus voluptates excepturi voluptatibus ab inventore.</p>
+                        </a>
+                    </li>
+
+                    <li><a href="#"><img src="img/piscina.jpg" width="150" alt="piscina">
+                            <h3>piscina</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque a error doloribus.
+                            Delectus voluptates excepturi voluptatibus ab inventore.</p>
+                        </a>
+                    </li>
+
+                </ul>
+            </div>
+
+        </div>
+
+        <div id="rodape">
+            <span>&copy Copyright 2000-2022 Chalé Hotel</span>
+        </div>
 
     </div>
     <!--Fim do container-->
